# claimbounded

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
claimbounded/: __init__.py  claims.py  cli.py  outputs.py  precedents.py  profiles.py  reports.py  schema.py  ui.py
examples/: lvo_report.md  lvo_stroke_triage.py
examples/example_profiles/: lvo_triage.json
tests/: test_claimbounded.py
